retrieve logs from worker pods (#53)
* retrieve logs from worker pods

* adding client_test

* rename methods GetWorkerPodLogs to GetWorkerPodRequest

* update API specification

* update documentation

* removing extra params from example queries in docs

* listing worker pods by label before getting logs request

* rename label var in Locust backed

* rename logs context vars

* remove extra labels from pods in Locust backend
